[package]
name = "iota"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
structopt = "0.3"
rumqttc = "0.8"
rustls = { version = "0.19", features = ["dangerous_configuration"] }
rustls-native-certs = "0.5"
tokio = { version = "1", features = ["full"] }
regex = "1"
once_cell = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"]}
console = "0.14"
webpki = { version = "0.21" }
pem = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.2"
single = "1"
